[package]
name = "memcpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
page_size = "0.4"
aligned_vec = {git = "https://github.com/uv-rust/aligned_vec"}

[features]
aligned=[]
trivial=[]
memcpy=[]
simd=[]
